<resources>
    <string name="app_name">Üyelik Sistemi</string>
    <string name="createAcount">Hesap Oluştur</string>
    <string name="register">Kayıt Ol</string>
    <string name="firstName">Ad</string>
    <string name="lastName">Soyad</string>
    <string name="age">Yaş</string>
    <string name="email">E-Posta adresi</string>
    <string name="password">Şifre</string>
    <string name="passwordAgain">Şifre tekrar</string>
</resources>